# code-zestaw-1

./: README.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
ZADANIE1/: CMakeLists.txt  README.md  main.cpp  pi_calculation.cpp  pi_calculation.h
ZADANIE1/tests/: test_partial_sum.cpp
ZADANIE2/: CMakeLists.txt  compare_strings.cpp  compare_strings.h  main.cpp
ZADANIE2/tests/: compare_strings_test.cpp
ZADANIE3/: CMakeLists.txt  README.md  main.cpp  progress_bar.cpp  progress_bar.h
ZADANIE3/tests/: test_progress_bar.cpp
ZADANIE4/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
ZADANIE4/tests/: test_fibonacci.cpp
ZADANIE5/: CMakeLists.txt  README.md  file_operations.cpp  file_operations.h  main.cpp  random_generators.cpp  random_generators.h  sentence_generator.cpp  sentence_generator.h
ZADANIE5/tests/: test_basic.cpp
ZADANIE5/txt/: okoliczniki_czasu.txt  okoliczniki_miejsca.txt  okoliczniki_sposobu.txt  okreslenia.txt  orzeczenia.txt  podmioty.txt
